fix highlight alignment in blockquote

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -27,6 +27,10 @@ a {
 blockquote {
   border-left: 4px solid $blockquote-border-color;
   margin: 8px 16px 8px 16px;
+
+  .highlight {
+    margin-left: 16px;
+  }
 }
 
 code { font-family: $code-font-family; }
